# TaskMaster

./: CMakeLists.txt  README.md  pig_test.html
include/: Task.h  TaskManager.h
src/: Task.cpp  TaskManager.cpp  main.cpp  test_main.cpp
